# ssg-github-cli

./: README.md  pyproject.toml
mygh/: mygh.py  team_repo_access.json
